--- a/src/hello_frontend/package.json
+++ b/src/hello_frontend/package.json
@@ -11,11 +11,12 @@
     "format": "prettier --write \"src/**/*.{json,js,jsx,ts,tsx,css,scss}\""
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@dfinity/agent": "^1.4.0",
     "@dfinity/candid": "^1.4.0",
-    "@dfinity/principal": "^1.4.0"
+    "@dfinity/principal": "^1.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
@@ -25,6 +26,7 @@
     "sass": "^1.63.6",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
-    "vite-plugin-environment": "^1.1.3"
+    "vite-plugin-environment": "^1.1.3",
+    "vite-plugin-sass": "^0.1.0"
   }
 }
